Centered detail view

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             z-index: 0;
         }
         
+        #detail {
+            z-index: 1;
+        }
+        
         #header {
             position: fixed;
             height: 200px;
@@ -149,7 +153,7 @@
             <h1>Kelly Ou </h1>
         </div>
         <div id="logo" class="col-md-2">
-            <img id="logo" src="/photos/logo_k.png" />
+            <img id="logo" src="photos/logo_k.png" />
         </div>
         <div id="title" class="col-md-5">
             <h1> Portfolio</h1>
