--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </a>
     </div>
     <div id="navbar" class="row">
-        <div class="col-md-4 col-sm-4 menuitem">
+        <div class="col-md-4 col-xs-4 menuitem">
             <h4 class="navtext" onclick="scene.render(TAG.TOP)">Home</h4>
         </div>
-        <div class="col-md-4 col-sm-4 menuitem">
+        <div class="col-md-4 col-xs-4 menuitem">
             <h4 class="navtext" onclick="scene.render('about')">About</h4>
         </div>
-        <div class="col-md-4 col-sm-4 menuitem">
+        <div class="col-md-4 col-xs-4 menuitem">
             <div class="dropdown" onclick="scene.dropdown()">
                 <h4 class="navtext dropdown">Portfolio</h4>
             </div>
