--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="Piece.js"></script>
-    <script src="Detail.js"></script>
-    <script src="Scene.js"></script>
+    <script src="lib/Piece.js"></script>
+    <script src="lib/Detail.js"></script>
+    <script src="lib/Scene.js"></script>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
     <div id="footer">
         <p>All Content © Kelly Ou 2016 | oukellyh@gmail.com | 858-353-5106</p>
     </div>
-    <script src="script.js"></script>
+    <script src="lib/script.js"></script>
 </body>
 
 </html>
