Added webpage title

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="lib/Piece.js"></script>
     <script src="lib/Detail.js"></script>
     <script src="lib/Scene.js"></script>
+    <title>Kelly Ou</title>
 </head>
 
 <body>
