--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-<!-- Fonts from Google fonts -->
-<link href='https://fonts.googleapis.com/css?family=Dancing+Script|Lato:400,300,100' rel='stylesheet' type='text/css'>
-<!--Other good fonts: Roboto, Ubuntu, Oswald, Raleway, Open Sans-->
-
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Kelly Ou</title>
+
+    <!--This description is displayed in your search results-->
+    <meta name="Description" content="The official site of Kelly Ou." />
+
+    <!--Keywords help target search results-->
+    <meta name="keywords" content="kelly ou, graphic design, UCLA, designer" />
+
+    <!--This allows your content to be resized on smaller devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- Fonts from Google fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Dancing+Script|Lato:400,300,100' rel='stylesheet' type='text/css'>
+    <!--Other good fonts: Roboto, Ubuntu, Oswald, Raleway, Open Sans-->
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="lib/Piece.js"></script>
     <script src="lib/Detail.js"></script>
     <script src="lib/Scene.js"></script>
-    <title>Kelly Ou</title>
 </head>
 
 <body>
