added Google search console HTML verification file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Description" content="The official site of Kelly Ou." />
 
     <!--Keywords help target search results-->
-    <meta name="keywords" content="kelly ou, graphic design, UCLA, designer" />
+    <meta name="keywords" content="kelly ou, graphic design, UCLA, illustrator, designer" />
 
     <!--This allows your content to be resized on smaller devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
